Update unit test